<resources>
    <string name="app_name">BMI CALC</string>
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="calculate_btn">Calculate</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>
    <string name="ent_name">Name</string>
    <string name="ent_height">Height</string>
    <string name="ent_weight">Weight</string>
    <string name="calculate">Calculate</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="bmi">BMI</string>
</resources>