<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enterName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".MainActivity"
    tools:ignore="LabelFor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/bmi_calculator"
        android:textColor="@color/teal_700"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:text="@string/ent_name"
        android:textColor="#00838F" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:text="@string/ent_height"
        android:textColor="#00838F" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        android:hint="@string/cm"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:text="@string/ent_weight"
        android:textColor="#00838F" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        android:hint="@string/kg"/>

    <Button
        android:id="@+id/button"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_gravity="center_horizontal"
        android:layout_margin="6dp"
        android:onClick="doCalc"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="79dp"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        android:text="@string/bmi"
        android:textColor="#00838F" />

</LinearLayout>